# parrotpark-sprig

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/benchmark/arc/: arc_gptx.csv
data/benchmark/gsm8k/: gsm8k_gptx.csv
data/benchmark/truthfulqa/: truthfulqa_gptx.csv
scripts/: beamsearch.py  config.py  grips_beamsearch.py  load_datasets.py  sprig.py
scripts/lib/: dataloader.py  modelloader.py  utils.py
